// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StarRating renders well 1`] = `
<div
  className="action_container"
>
  <div
    className="action__buttons_container"
  >
    <button
      className="action__watch"
      onClick={[Function]}
      type="button"
    >
      Watch now
    </button>
    <button
      className="action__view"
      onClick={[Function]}
      type="button"
    >
      View info
    </button>
  </div>
</div>
`;

exports[`StarRating renders well without and with state { showTrailer: true } 1`] = `
<div
  className="action_container"
>
  <div
    className="action__buttons_container"
  >
    <button
      className="action__watch"
      onClick={[Function]}
      type="button"
    >
      Watch now
    </button>
    <button
      className="action__view"
      onClick={[Function]}
      type="button"
    >
      View info
    </button>
  </div>
</div>
`;

exports[`StarRating renders well without and with state { showTrailer: true } 2`] = `
<div
  className="action_container"
>
  <div
    className="action__buttons_container"
  >
    <button
      className="action__watch"
      onClick={[Function]}
      type="button"
    >
      Watch now
    </button>
    <button
      className="action__view"
      onClick={[Function]}
      type="button"
    >
      View info
    </button>
    <Trailer>
      <div
        className="Trailer"
      >
        <button
          className="movieList__item__trailer_closeButton"
          id={123}
          onClick={[Function]}
          type="button"
        >
          <i
            className="fas fa-times"
          />
        </button>
        <TrailerError>
          <Iframe
            trailer="https://www.youtube.com/embed/kVrqfYjkTdQ&t"
          />
        </TrailerError>
      </div>
    </Trailer>
  </div>
</div>
`;

exports[`StarRating renders well2222 1`] = `
<div
  className="action_container"
>
  <div
    className="action__buttons_container"
  >
    <button
      className="action__watch"
      onClick={[Function]}
      type="button"
    >
      Watch now
    </button>
    <button
      className="action__view"
      onClick={[Function]}
      type="button"
    >
      View info
    </button>
    <Trailer>
      <div
        className="Trailer"
      >
        <button
          className="movieList__item__trailer_closeButton"
          id={123}
          onClick={[Function]}
          type="button"
        >
          <i
            className="fas fa-times"
          />
        </button>
        <TrailerError>
          <Iframe
            trailer="https://www.youtube.com/embed/kVrqfYjkTdQ&t"
          />
        </TrailerError>
      </div>
    </Trailer>
  </div>
</div>
`;
